--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <nav class="navbar">
         <div class="logo">
-            <img src="heart.png" alt="logo">
+            <img src="/images/heart.png" alt="logo">
         </div>
         <ul>
             <li><a href="https://www.google.com/">Home</a></li>
@@ -40,7 +40,7 @@
         <h1>Our Service</h1>
         <div class="ordering">
             <div class="a">
-                <img src="/raspberries-2023404_960_720.webp" alt="">
+                <img src="/images/raspberries-2023404_960_720.webp" alt="">
                 <h2>Food Ordering</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate, voluptas tempore? Odio magni
                     aut
@@ -49,7 +49,7 @@
                     delectus error enim.</p>
             </div>
             <div class="a">
-                <img src="/pizza.webp" alt="">
+                <img src="/images/pizza.webp" alt="">
                 <h2>Food Ordering</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate, voluptas tempore? Odio magni
                     aut
@@ -58,7 +58,7 @@
                     delectus error enim.</p>
             </div>
             <div class="a">
-                <img src="/vegetables-752153_960_720.webp" alt="">
+                <img src="/images/vegetables-752153_960_720.webp" alt="">
                 <h2>Food Ordering</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate, voluptas tempore? Odio magni
                     aut
@@ -71,11 +71,11 @@
     <section class="section3">
         <h1>Our Clients</h1>
         <div class="logos5">
-            <img class="logosimg" src="/941991.png" alt="">
-            <img class="logosimg" src="/Dell_logo_2016.svg.png" alt="">
-            <img class="logosimg" src="/hp logo.png" alt="">
-            <img class="logosimg" src="/microsoft.jpg" alt="">
-            <img class="logosimg" src="/skype.jpg" alt="">
+            <img class="logosimg" src="/images/941991.png" alt="">
+            <img class="logosimg" src="/images/Dell_logo_2016.svg.png" alt="">
+            <img class="logosimg" src="/images/hp logo.png" alt="">
+            <img class="logosimg" src="/images/microsoft.jpg" alt="">
+            <img class="logosimg" src="/images/skype.jpg" alt="">
         </div>
     </section>
     <section class="section4">
