--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <li><a href="#">Contact Us</a></li>
         </ul>
     </nav>
+    <!-- hello -->
     <section>
         <div class="first">
             <h1>Welcome to MyOnlineMeal</h1>
