--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <nav class="navbar">
         <div class="logo">
-            <img src="/images/heart.png" alt="logo">
+            <img src="images/heart.png" alt="logo">
         </div>
         <ul>
             <li><a href="https://www.google.com/">Home</a></li>
