--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h1>Our Service</h1>
         <div class="ordering">
             <div class="a">
-                <img src="/images/raspberries-2023404_960_720.webp" alt="">
+                <img src="images/raspberries-2023404_960_720.webp" alt="">
                 <h2>Food Ordering</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate, voluptas tempore? Odio magni
                     aut
@@ -50,7 +50,7 @@
                     delectus error enim.</p>
             </div>
             <div class="a">
-                <img src="/images/pizza.webp" alt="">
+                <img src="images/pizza.webp" alt="">
                 <h2>Food Ordering</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate, voluptas tempore? Odio magni
                     aut
@@ -59,7 +59,7 @@
                     delectus error enim.</p>
             </div>
             <div class="a">
-                <img src="/images/vegetables-752153_960_720.webp" alt="">
+                <img src="images/vegetables-752153_960_720.webp" alt="">
                 <h2>Food Ordering</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate, voluptas tempore? Odio magni
                     aut
@@ -72,11 +72,11 @@
     <section class="section3">
         <h1>Our Clients</h1>
         <div class="logos5">
-            <img class="logosimg" src="/images/941991.png" alt="">
-            <img class="logosimg" src="/images/Dell_logo_2016.svg.png" alt="">
-            <img class="logosimg" src="/images/hp logo.png" alt="">
-            <img class="logosimg" src="/images/microsoft.jpg" alt="">
-            <img class="logosimg" src="/images/skype.jpg" alt="">
+            <img class="logosimg" src="images/941991.png" alt="">
+            <img class="logosimg" src="images/Dell_logo_2016.svg.png" alt="">
+            <img class="logosimg" src="images/hp logo.png" alt="">
+            <img class="logosimg" src="images/microsoft.jpg" alt="">
+            <img class="logosimg" src="images/skype.jpg" alt="">
         </div>
     </section>
     <section class="section4">
